# RAG_For_RACV_PolicyDocs

./: README.md  main.py  pyproject.toml  requirements.txt
RAG/: 01-document.ipynb  02-pdf_loader.ipynb
data/text_files/: racv_motor_insurance.txt  racv_roadside_assistance.txt
